# mirai

./: LICENSE
contracts/: .dockerignore  DOCKER_SETUP_FIXED.md  README.MD  docker-compose.yml  start-dev.sh  test-docker-quick.sh  test-setup.sh
contracts/commcoin/programs/commcoin/: Cargo.toml
contracts/commcoin/programs/commcoin/src/: lib.rs
contracts/commcoin/programs/commcoin/src/instructions/: buy.rs  configure.rs  extend_account.rs  launch.rs  launch_dup.rs  mod.rs  pantru.rs  realloc.rs  rope.rs  sell.rs  stack.rs  stack_dup.rs
contracts/commcoin/programs/commcoin/src/states/: bonding_curve.rs  config.rs  mod.rs  vault.rs
docs/: API_DOCUMENTATION.md  BACKEND_SUMMARY.md  CLEANUP_GUIDE.md  CLIENT_DEVELOPMENT_SETUP.md  CODEBASE_ORGANIZATION.md  COMPREHENSIVE_TESTING_GUIDE.md  CONTRACTS_DEVELOPMENT_SETUP.md  HELIUS_SETUP.md  MULTI_CLOUD_DEPLOYMENT.md  README.md  SCRIPT_ORGANIZATION.md  SELF_HOSTED_SETUP.md  SERVER_DEVELOPMENT_SETUP.md  SERVER_MIGRATION.md  SYSTEM_ARCHITECTURE.md  TESTING_GUIDE.md  setup_helius.py  tech_setup.MD
scripts/: cleanup-e2e.sh  quick-cleanup.sh  run-tests.sh  (+7 more)
server_rust/: .env  AWS_DEPLOYMENT.md  Cargo.toml  DATABASE_ORM.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  QUICK_START.md  README.md  TRANSACTION_LISTENER_GUIDE.md  WEBSOCKET_ARCHITECTURE.md  buildspec.yml  docker-compose.deps.yml  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml  env.example  prometheus.yml  setup_env.sh  start_server.sh  test-setup.sh  test_api.py  test_websocket.html  test_websocket.py  websocket_config.md
server_rust/deploy/: aws-deploy.sh  docker-swarm-deploy.sh  gcp-deploy.sh  private-datacenter-deploy.sh
server_rust/migrations/: 20240101000001_initial_schema.sql  20240719_coins_and_events.sql  20240720_social_features.sql  20240720_social_features.sql.backup  20241201000001_update_users_table.sql
server_rust/scripts/: test_websocket.sh
server_rust/src/: lib.rs  main.rs
server_rust/src/api/: auth_utils.rs  middleware.rs  mod.rs  routes.rs
server_rust/src/api/handlers/: analytics.rs  auth.rs  health.rs  market.rs  mod.rs  notification.rs  social.rs  token.rs  trading.rs  transaction.rs  user.rs  websocket.rs
server_rust/src/blockchain/: mod.rs  solana.rs
server_rust/src/cache/: mod.rs  redis.rs
server_rust/src/config/: mod.rs
server_rust/src/database/: connection.rs  migration.rs  mod.rs  repositories.rs
server_rust/src/error/: mod.rs
server_rust/src/models/: market.rs  mod.rs  notification.rs  post.rs  token.rs  transaction.rs  user.rs
server_rust/src/websocket/: connection_manager.rs  handlers.rs  manager.rs  message_broker.rs  mod.rs  transaction_listener.rs
server_rust/terraform/: cicd.tf  ecs.tf  elasticache.tf  main.tf  rds.tf  terraform.tfvars.example
server_rust/tests/: integration_tests.rs
(+299 files in other folders)
