[package]
name = "community_coin_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "community_coin_server"
path = "src/main.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "chrono", "uuid", "migrate", "rust_decimal", "runtime-tokio-rustls"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Decimal arithmetic
rust_decimal = { version = "1.0", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
jsonwebtoken = "9.0"
cookie = { version = "0.18", features = ["secure"] }
ed25519-dalek = "2.0"
bs58 = "0.5"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket and async utilities
tokio-tungstenite = "0.21"
futures-util = "0.3"
futures = "0.3"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Metrics
metrics = "0.22"
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
httpmock = "0.7"
tempfile = "3.0"
serial_test = "3.0"

# HTTP testing
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

# WebSocket testing
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Test utilities
pretty_assertions = "1.4"
wiremock = "0.6"

[profile.test]
opt-level = 1

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1 
